--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <ul class="nav navbar-nav">
       <li class="active"><%= link_to "Home", root_path %></li>
       <li><%= link_to "Search", search_path %></li>
-      <li><%= link_to "Items", search_path %></li>
+      <li><%= link_to "Items", item_path %></li>
       <li><%= link_to "Post", posts_path  %></li>
       <li></li>
     </ul>
