--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,20 +19,67 @@
 	text-align: center;
 }
 
-.itemlist {
-	overflow: hidden;
-}
+  div.item{
+    display: inline-block;
+    margin: 5px;
+     width: 31%;
 
-.item {
-	width: 31%;
-	float: left;
-	padding-left: 2%;
-	margin-right: 1%;
-	margin-bottom: 5%;
-}
+  }
+  div.itemimg{
+    margin: 5px;
+    height: 100%;
+  }
 
-.itemimg a:hover img {
-  opacity: 0.7;
-  filter: item(opacity=70);
-  -ms-filter: "item(opacity=70)";
-}
+  h4{
+    font-family: "ヒラギノ角ゴ Pro","Hiragino Kaku Gothic Pro"; font-weight: bold;
+    background: linear-gradient(transparent 70%, #fa8072 90%);
+    font-size: 1.3em;
+    color: #fff;
+    text-shadow: 0px 1px 10px #000;
+  }
+
+  
+  p{
+    font-family: "ヒラギノ角ゴ Pro","Hiragino Kaku Gothic Pro"; font-weight: bold;
+    color: #fff;
+    text-shadow: 0px 1px 10px #000;
+    font-size: 0.9em;
+  }
+
+  .overlay{
+    position: absolute;
+    z-index: 10;
+    background-color: rgba(255,255,255,0);
+    width: 31%;
+    height: 480px;
+    margin-right: 5px;
+    margin-left: 10px;
+    opacity: 0;
+    padding: 20px;
+  }
+  .overlay-top{
+    height: 330px;
+
+  }
+  .overlay-bottom{
+    height: 150px;
+
+  }
+  .overlay:hover{
+    
+    opacity: 1;
+  }
+
+  .overlay-top:hover{
+    opacity: 0;
+  }
+  .overlay-bottom:hover{
+    background-color: rgba(128,128,128,0);
+    opacity: 1;
+  }
+
+  h1{
+    font-family: 'Shadows Into Light', cursive;
+    margin-left: 10px;
+  }
+
