--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,7 +18,12 @@
   
     <%= f.label :subject %><br>
     <%= f.text_field :subject %><br><br>
-  
+
+
+    <%= f.label :title %><br>
+    <%= f.text_field :title %><br><br>
+
+
     <%= f.label :tags %><br>
     <% @post.tags.each do |tag| %>
         <%= f.fields_for :tags, tag do |tag_field| %>
@@ -29,6 +34,11 @@
   
    <%= f.label :picture %><br>
    <%= f.file_field :picture %><br><br>
+
+   <%= f.label :comment %><br>
+    <%= f.text_area :comment %><br><br>
+
+
 <br>
     <%= f.submit %>
 <% end %>
