--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -20,14 +20,23 @@
   
     <%= f.label :subject %><br>
     <%= f.text_field :subject %><br><br>
+
+
+    <%= f.label :title %><br>
+    <%= f.text_field :title %><br><br>
   
+
     <%= f.label :tags %><br>
     <% @post.tags.each do |tag| %>
-        <%= f.fields_for :tags, tag do |tag_field| %>
-            <%= tag_field.text_field :name %>
-        <% end %>
+    <%= f.fields_for :tags, tag do |tag_field| %>
+    <%= tag_field.text_field :name %>
+    <% end %>
     <% end %>
     <br><br>
+
+    <%= f.label :comment %><br>
+    <%= f.text_area :comment %><br><br>
+
 
 <br>
     <%= f.submit %>
