--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,21 +6,17 @@
       <th>Date</th>
       <th>Subject</th>
       <th>Tags</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th>Action</th>
     </tr>
   </thead>
 
   <tbody>
     <% @posts.each do |post| %>
       <tr>
-        <td><%= post.date %> |</td>
-        <td>| <%= post.subject %> </td>
-        <td> <%= post.tags %></td>
-        <td><%= link_to 'Show', post %> |</td>
-        <td>| <%= link_to 'Edit', edit_post_path(post) %> |</td>
-        <td>| <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td width="100"><%= post.date %></td>
+        <td width="100"><%= post.subject %></td>
+        <td width="400"><% post.tags.each do |tag| %><%= tag.name %> | <% end %></td>
+        <td><%= link_to 'Show', post %> | <%= link_to 'Edit', edit_post_path(post) %> | <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
