--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">iQON web</a>
+    <%= link_to 'iQON web', root_path, class: "navbar-brand" %>
   </div>
 
   <div class="navbar-collapse collapse">
