--- a/app/views/static_pages/items.html.erb
+++ b/app/views/static_pages/items.html.erb
@@ -3,7 +3,7 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/application.css">
 </head>
 
-<h1>Search</h1>
+<h1>Items</h1>
 <% if user_signed_in? %>
 
 <% @posts.each do |post| %>
